test(): fix broken test